# qtl866

./: CMakeLists.txt  README.md  devices.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtl866  qtl866.ldd
.gear/: qtl866.spec  rules
